keep font size fixed on mobile devices
allow changing font sizes through the browser

close #31

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 2vmax;
   background-color: #F0EDE9;
 }
 
